--- a/crawler/build.gradle
+++ b/crawler/build.gradle
@@ -29,10 +29,17 @@ ext {
 }
 
 dependencies {
+    implementation project(":crawler-domain")
+
+    implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'commons-validator:commons-validator:1.7'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:mongodb'
